Fixed == warning and applied min height to footer to avoid weird distortion problem.

--- a/public/style.css
+++ b/public/style.css
@@ -256,7 +256,7 @@ body {
 
 .footer {
   width: 100%;
-  height: 5vh;
+  min-height: 5vh;
   background-color: grey;
   text-align: center;
   color: #fff; }
