--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -349,7 +349,7 @@ body {
 // Footer
 .footer {
   width: 100%;
-  height: 5vh;
+  min-height: 5vh;
   background-color: grey;
   text-align: center;
   color: #fff;
